--- a/app/src/main/res/layout/item_image_layout.xml
+++ b/app/src/main/res/layout/item_image_layout.xml
@@ -19,10 +19,12 @@
 
         <!--on below line we are creating
             a simple image view-->
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/idIVNasa"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             android:layout_gravity="center"
             android:layout_margin="8dp"
             android:padding="5dp"
@@ -30,7 +32,7 @@
 
         <!--on below line we are creating
             a simple text view-->
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/idTVNasa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
